<resources>
    <string name="app_name">Yasser-Story</string>
    <string name="userName">userName</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="i_accept_terms">I terms and conditions</string>
    <string name="home">Home</string>
    <string name="logout">logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_subtitle">Enter subtitle</string>
    <string name="enter_description">Enter description here</string>
    <string name="btn_add_description">add</string>

</resources>