<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStoryActivity">

    <EditText
        android:id="@+id/etTitleAdd"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:maxLength="15"
        android:inputType="text"
        android:hint="@string/enter_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/etSubtitleAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_subtitle"
        android:maxLength="25"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etTitleAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etdescriptionAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textMultiLine"
        android:lines="6"
        android:gravity="top|start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSubtitleAdd"

        />
    <Button
        android:id="@+id/btnAddStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etdescriptionAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/btn_add_description"

        />







</androidx.constraintlayout.widget.ConstraintLayout>